Refine caching and add PoiCompetitorCache